<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.EditPost">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_post"
                android:textColor="@color/colorAccent"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ep_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_title"
                android:maxLines="3"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/ep_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/post_description"
                android:maxLines="14"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/ep_links"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/post_links"
                android:maxLines="4"
                android:textSize="14sp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_upload"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="6dp"
                android:drawablePadding="8dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/ep_img"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_edit_img" />


            <Button
                android:id="@+id/ep_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_main"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_gravity="bottom"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ep_delete"
        android:src="@drawable/ic_delete_sweep_white"
        app:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        />

</RelativeLayout>