<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.events.CreateEvent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="event creation"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:layout_margin="10dp"
        />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ce_name"
            android:hint="@string/event_name"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ce_desc"
            android:hint="@string/event_description"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/ce_total_no"
                android:hint="@string/capacity"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/ce_budget"
                android:hint="@string/budget"
                android:inputType="numberDecimal"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                />
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ce_sponsor_name"
            android:hint="sponsor name"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ce_sponsor_link"
            android:hint="sponsor links"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload Image (90 X 90)"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginTop="18dp"
            />

        <ImageView
            android:id="@+id/ce_img_n"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="Upload Image (360 X 360)"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/ce_img_l"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_edit_img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sponsor Image (360 X 360)"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginTop="18dp"
            />

        <ImageView
            android:id="@+id/ce_img_s"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_edit_img" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ce_submit"
            android:background="@drawable/rounded_button_main"
            android:text="@string/create_event"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            />


    </LinearLayout>
</ScrollView>

</LinearLayout>